--- a/main.css
+++ b/main.css
@@ -16,10 +16,12 @@ body {
 h1 {
     color: #669966;
     padding: 30px 0 0 0;
+    font-family:Helvetica, Arial, sans-serif;
     font-size: 34px;
     line-height: 40px;
 }
 h3 {
+    font-family:Helvetica, Arial, sans-serif;
     color: #669966;
     padding: 10px 0 0 0;
     margin: 0 0 0 0;
