--- a/main.css
+++ b/main.css
@@ -288,6 +288,10 @@ a.anchor_top {
     font-size: 20px;
     line-height: 28px;
     color: #4b4b4b;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    border:solid 1px #aaaaaa;
 }
 #contact_form input {
     width: 380px;
