--- a/main.css
+++ b/main.css
@@ -306,10 +306,18 @@ a.anchor_top {
     outline: none;
 }
 #contact_form .button_row input {
-    width: 200px;
-    height: 40px;
+    width: 240px;
+    height: 50px;
     background:#669966;
     color:#ffffff;
+    box-shadow:.5px .5px 3px #888888;
+}
+#contact_form .button_row input:hover,
+#contact_form .button_row input:active {
+    width: 240px;
+    height: 48px;
+    margin-top:2px;
+    box-shadow:none;
 }
 
 /* Contact Form - validation */
@@ -639,13 +647,15 @@ a.anchor_top {
         height: 100px;
     }
     #contact_form .button_row input {
-        width: 90%;
-        padding-left: 5%;
-        padding-right: 5%;
-        height: 40px;
+        width: 100%;
+        height: 50px;
     }
-
-
+    #contact_form .button_row input:hover,
+    #contact_form .button_row input:active {
+        width: 100%;
+        height: 48px;
+        margin-top:2px;
+    }
 
 
 
