--- a/styles/main.css
+++ b/styles/main.css
@@ -82,7 +82,6 @@ a.LinkedIn:hover {
   -moz-transition: .4s;
   -webkit-transition: .4s; }
 
-/* End universal styles */
 header {
   background: url(../assets/background_green.jpg) repeat top right;
   width: 100%;
@@ -93,57 +92,46 @@ header {
   left: 0;
   right: 0;
   z-index: 100; }
-
-header #header_container {
-  width: 900px;
-  margin: 0px auto; }
-
-header #header_container #logo {
-  float: left; }
-
-header #header_container #logo img {
-  transform: scale(1);
-  transition: transform .2s ease; }
-
-header #header_container #logo img:hover,
-header #header_container #logo img:focus {
-  transform: scale(0.98);
-  transition: transform .2s ease; }
-
-header nav {
-  float: right; }
-
-header nav ul {
-  padding: 60px 0 0 0; }
-
-header nav ul li {
-  list-style-type: none;
-  padding: 0 0 0 30px;
-  display: inline;
-  text-align: center; }
-
-header nav ul a {
-  color: #ffffff;
-  text-decoration: none;
-  font-size: 20px;
-  transition: .4s;
-  -o-transition: .4s;
-  -ms-transition: .4s;
-  -moz-transition: .4s;
-  -webkit-transition: .4s; }
-
-header nav ul a:visited {
-  color: #ffffff;
-  text-decoration: none; }
-
-header nav ul a:hover {
-  color: #f4a460;
-  text-decoration: none;
-  transition: .4s;
-  -o-transition: .4s;
-  -ms-transition: .4s;
-  -moz-transition: .4s;
-  -webkit-transition: .4s; }
+  header #header_container {
+    width: 900px;
+    margin: 0px auto; }
+    header #header_container #logo {
+      float: left; }
+    header #header_container #logo img {
+      transform: scale(1);
+      transition: transform .2s ease; }
+      header #header_container #logo img:hover, header #header_container #logo img:focus {
+        transform: scale(0.98);
+        transition: transform .2s ease; }
+  header nav {
+    float: right; }
+    header nav ul {
+      padding: 60px 0 0 0; }
+      header nav ul li {
+        list-style-type: none;
+        padding: 0 0 0 30px;
+        display: inline;
+        text-align: center; }
+      header nav ul a {
+        color: #ffffff;
+        text-decoration: none;
+        font-size: 20px;
+        transition: .4s;
+        -o-transition: .4s;
+        -ms-transition: .4s;
+        -moz-transition: .4s;
+        -webkit-transition: .4s; }
+        header nav ul a:visited {
+          color: #ffffff;
+          text-decoration: none; }
+        header nav ul a:hover {
+          color: #f4a460;
+          text-decoration: none;
+          transition: .4s;
+          -o-transition: .4s;
+          -ms-transition: .4s;
+          -moz-transition: .4s;
+          -webkit-transition: .4s; }
 
 #main {
   background: #e7e9e8;
@@ -152,10 +140,9 @@ header nav ul a:hover {
   overflow: auto;
   border-bottom: solid 5px #f4a460;
   margin-top: 130px; }
-
-#main #container {
-  width: 900px;
-  margin: 0 auto; }
+  #main #container {
+    width: 900px;
+    margin: 0 auto; }
 
 /* BANNERS */
 p#banner {
@@ -195,20 +182,16 @@ img.headshot {
   width: 100%;
   text-align: center;
   margin-bottom: 80px; }
-
-#samples div.box {
-  display: inline; }
-
-#samples div.box img {
-  width: 24%;
-  height: auto;
-  transform: scale(1);
-  transition: transform .2s ease; }
-
-#samples div.box img:hover,
-#samples div.box img:active {
-  transform: scale(0.98);
-  transition: transform .2s ease; }
+  #samples div.box {
+    display: inline; }
+  #samples div.box img {
+    width: 24%;
+    height: auto;
+    transform: scale(1);
+    transition: transform .2s ease; }
+    #samples div.box img:hover, #samples div.box img:active {
+      transform: scale(0.98);
+      transition: transform .2s ease; }
 
 footer {
   background: #75a375;
@@ -217,14 +200,13 @@ footer {
   overflow: auto;
   margin: 0 auto;
   padding: 40px 0 80px 0; }
-
-footer #footer_text {
-  padding: 0 40px 0 40px;
-  text-align: center;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: bold;
-  color: #ffffff; }
+  footer #footer_text {
+    padding: 0 40px 0 40px;
+    text-align: center;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: bold;
+    color: #ffffff; }
 
 /* Anchor styles */
 a.anchor {
@@ -244,10 +226,8 @@ a.anchor_top {
   width: 400px;
   margin-top: 30px;
   margin-bottom: 100px; }
-
 #contact_form .form_row {
   margin-bottom: 15px; }
-
 #contact_form input,
 #contact_form textarea {
   font-family: indexCustom, Helvetica, sans-serif;
@@ -258,19 +238,17 @@ a.anchor_top {
   -moz-border-radius: 5px;
   border-radius: 5px;
   border: solid 1px #aaaaaa; }
-
 #contact_form input {
   width: 380px; }
-
+  #contact_form input:focus {
+    border: solid 4px #669966;
+    outline: none; }
 #contact_form textarea {
   width: 380px;
   height: 150px; }
-
-#contact_form input:focus,
-#contact_form textarea:focus {
-  border: solid 4px #669966;
-  outline: none; }
-
+  #contact_form textarea:focus {
+    border: solid 4px #669966;
+    outline: none; }
 #contact_form .button_row input {
   width: 240px;
   height: 50px;
@@ -282,18 +260,16 @@ a.anchor_top {
   -ms-transition: .2s;
   -moz-transition: .2s;
   -webkit-transition: .2s; }
-
-#contact_form .button_row input:hover,
-#contact_form .button_row input:active {
-  width: 240px;
-  height: 48px;
-  margin-top: 2px;
-  box-shadow: none;
-  transition: .2s;
-  -o-transition: .2s;
-  -ms-transition: .2s;
-  -moz-transition: .2s;
-  -webkit-transition: .2s; }
+  #contact_form .button_row input:hover, #contact_form .button_row input:active {
+    width: 240px;
+    height: 48px;
+    margin-top: 2px;
+    box-shadow: none;
+    transition: .2s;
+    -o-transition: .2s;
+    -ms-transition: .2s;
+    -moz-transition: .2s;
+    -webkit-transition: .2s; }
 
 /* Contact Form - validation */
 #name_validation,
@@ -317,16 +293,14 @@ a.anchor_top {
 /* ILLUSTRATIONS */
 #illustrations {
   margin-bottom: 80px; }
-
-#illustrations div.box_ai {
-  display: inline; }
-
-#illustrations div.box_ai img {
-  border: solid 3px #669966;
-  padding: 10px;
-  margin: 5px;
-  width: 44%;
-  height: auto; }
+  #illustrations div.box_ai {
+    display: inline; }
+  #illustrations div.box_ai img {
+    border: solid 3px #669966;
+    padding: 10px;
+    margin: 5px;
+    width: 44%;
+    height: auto; }
 
 /* END ILLUSTRATIONS */
 /* MOBILE STYLES - MOBILE STYLES - MOBILE STYLES - MOBILE STYLES */
@@ -337,17 +311,13 @@ a.anchor_top {
     padding-left: 2%;
     padding-right: 2%;
     margin: 0px auto; }
-
   header nav {
     float: left;
     clear: both; }
-
   header nav ul {
     padding: 0 0 0 0; }
-
   header nav ul li {
     padding: 0 10px 0 5px; }
-
   header nav ul a {
     font-size: 18px; }
 
@@ -408,49 +378,41 @@ a.anchor_top {
 @media (min-width: 200px) and (max-width: 421px) {
   header {
     background: #558055; }
-
-  header #header_container {
-    width: 100%;
-    margin: 0px auto; }
-
-  header #header_container #logo img {
-    width: 280px;
-    height: 70px;
-    height: auto; }
-
-  header #header_container #logo {
-    margin: 0 0 10px 20px;
-    float: left; }
-
-  header nav {
-    float: left;
-    clear: both;
-    width: 100%;
-    margin-top: -25px;
-    margin-bottom: 10px; }
-
-  header nav ul {
-    padding: 0 0 0 0;
-    margin-bottom: 0;
-    text-align: center; }
-
-  header nav ul li {
-    text-align: center;
-    padding: 0 5px 10px 5px; }
-
-  header nav ul a {
-    font-size: 14px;
-    line-height: 20px; }
+    header #header_container {
+      width: 100%;
+      margin: 0px auto; }
+    header #header_container #logo img {
+      width: 280px;
+      height: 70px;
+      height: auto; }
+    header #header_container #logo {
+      margin: 0 0 10px 20px;
+      float: left; }
+    header nav {
+      float: left;
+      clear: both;
+      width: 100%;
+      margin-top: -25px;
+      margin-bottom: 10px; }
+    header nav ul {
+      padding: 0 0 0 0;
+      margin-bottom: 0;
+      text-align: center; }
+    header nav ul li {
+      text-align: center;
+      padding: 0 5px 10px 5px; }
+    header nav ul a {
+      font-size: 14px;
+      line-height: 20px; }
 
   #main {
     width: 100%;
     overflow: auto;
     margin-top: 120px; }
-
-  #main #container {
-    width: auto;
-    min-width: 0px;
-    max-width: 421px; }
+    #main #container {
+      width: auto;
+      min-width: 0px;
+      max-width: 421px; }
 
   p#banner,
   p#banner2 {
@@ -514,40 +476,33 @@ a.anchor_top {
   /* ILLUSTRATIONS */
   #illustrations {
     margin-bottom: 60px; }
-
-  #illustrations div.box_ai {
-    display: block; }
-
-  #illustrations div.box_ai img {
-    width: 90%;
-    height: auto; }
+    #illustrations div.box_ai {
+      display: block; }
+    #illustrations div.box_ai img {
+      width: 90%;
+      height: auto; }
 
   /* END ILLUSTRATIONS */
   /* CONTACT FORM - MOBILE */
   #contact_form form {
     width: 100%;
     margin-bottom: 80px; }
-
   #contact_form input {
     width: 90%;
     padding-left: 5%;
     padding-right: 5%; }
-
   #contact_form textarea {
     width: 90%;
     padding-left: 5%;
     padding-right: 5%;
     height: 100px; }
-
   #contact_form .button_row input {
     width: 100%;
     height: 50px; }
-
-  #contact_form .button_row input:hover,
-  #contact_form .button_row input:active {
-    width: 100%;
-    height: 48px;
-    margin-top: 2px; }
+    #contact_form .button_row input:hover, #contact_form .button_row input:active {
+      width: 100%;
+      height: 48px;
+      margin-top: 2px; }
 
   /* Anchor styles */
   a.anchor {
