--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,91 +1,5 @@
-/* Universal styles */
-
-@font-face{
-    font-family: LiberationSans;
-    src: url(../assets/LiberationSans-Regular.ttf);
-}
-
-body {
-    font-family: LiberationSans, Helvetica, sans-serif;
-    background: #ffffff;
-    width: 100%;
-    margin: 0;
-    color: #4b4b4b;
-    overflow-x: hidden;
-}
-h1 {
-    color: #669966;
-    padding: 30px 0 0 0;
-    font-family:Helvetica, Arial, sans-serif;
-    font-size: 34px;
-    line-height: 40px;
-}
-h3 {
-    font-family:Helvetica, Arial, sans-serif;
-    color: #669966;
-    padding: 10px 0 0 0;
-    margin: 0 0 0 0;
-}
-p {
-    font-size: 18px;
-    line-height: 24px;
-    color: #4b4b4b;
-}
-p.margin_bottom {
-    margin-bottom: 80px;
-}
-p.margin_bottom2 {
-    margin-bottom: 60px;
-}
-span.highlight {
-    color: #669966;
-}
-span.highlight2 {
-    color: #f4a460;
-}
-span.highlight3 {
-    color: #f4a460;
-    font-size: 30px;
-}
-a.fade {
-    color: #669966;
-    font-weight: bold;
-    text-decoration: none;
-    transition: .4s;
-    -o-transition: .4s;
-    -ms-transition: .4s;
-    -moz-transition: .4s;
-    -webkit-transition: .4s;
-}
-a.fade:hover {
-    color: #f4a460;
-    text-decoration: none;
-    transition: .4s;
-    -o-transition: .4s;
-    -ms-transition: .4s;
-    -moz-transition: .4s;
-    -webkit-transition: .4s;
-}
-a.LinkedIn {
-    color: #4875b4;
-    text-decoration: none;
-    font-weight: bold;
-    transition: .4s;
-    -o-transition: .4s;
-    -ms-transition: .4s;
-    -moz-transition: .4s;
-    -webkit-transition: .4s;
-}
-a.LinkedIn:hover {
-    color: #f4a460;
-    text-decoration: none;
-    transition: .4s;
-    -o-transition: .4s;
-    -ms-transition: .4s;
-    -moz-transition: .4s;
-    -webkit-transition: .4s;
-}
-/* End universal styles */
+@import "_variables";
+@import "_universal";
 
 
 
@@ -102,58 +16,79 @@ header {
     left: 0;
     right: 0;
     z-index: 100;
+
+
+        #header_container {
+        width: 900px;
+        margin: 0px auto;
+        
+            #logo {
+            float: left;
+            }
+            #logo img {
+            transform: scale(1);
+            transition: transform .2s ease;
+
+                &:hover, &:focus {
+                transform: scale(.98);
+                transition: transform .2s ease;
+                }
+
+            }
+        }
+        
+
+        nav {
+        float: right;
+        
+            ul {
+            padding: 60px 0 0 0;
+
+                li {
+                list-style-type: none;
+                padding: 0 0 0 30px;
+                display: inline;
+                text-align: center;
+                }
+                a {
+                color: $white;
+                text-decoration: none;
+                font-size: 20px;
+                transition: .4s;
+                -o-transition: .4s;
+                -ms-transition: .4s;
+                -moz-transition: .4s;
+                -webkit-transition: .4s;
+
+                    &:visited {
+                    color: $white;
+                    text-decoration: none;
+                    }
+
+                    &:hover {
+                    color: #f4a460;
+                    text-decoration: none;
+                    transition: .4s;
+                    -o-transition: .4s;
+                    -ms-transition: .4s;
+                    -moz-transition: .4s;
+                    -webkit-transition: .4s;
+                    }
+
+                }
+
+            }
+            
+
+        }
+
 }
-header #header_container {
-    width: 900px;
-    margin: 0px auto;
-}
-header #header_container #logo {
-    float: left;
-}
-header #header_container #logo img {
-    transform: scale(1);
-    transition: transform .2s ease;
-}
-header #header_container #logo img:hover,
-header #header_container #logo img:focus {
-    transform: scale(.98);
-    transition: transform .2s ease;
-}
-header nav {
-    float: right;
-}
-header nav ul {
-    padding: 60px 0 0 0;
-}
-header nav ul li {
-    list-style-type: none;
-    padding: 0 0 0 30px;
-    display: inline;
-    text-align: center;
-}
-header nav ul a {
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 20px;
-    transition: .4s;
-    -o-transition: .4s;
-    -ms-transition: .4s;
-    -moz-transition: .4s;
-    -webkit-transition: .4s;
-}
-header nav ul a:visited {
-    color: #ffffff;
-    text-decoration: none;
-}
-header nav ul a:hover {
-    color: #f4a460;
-    text-decoration: none;
-    transition: .4s;
-    -o-transition: .4s;
-    -ms-transition: .4s;
-    -moz-transition: .4s;
-    -webkit-transition: .4s;
-}
+
+
+
+
+
+
 #main {
     background: #e7e9e8;
     background: url(../assets/background_body.jpg) repeat top right;
@@ -161,11 +96,14 @@ header nav ul a:hover {
     overflow: auto;
     border-bottom: solid 5px #f4a460;
     margin-top: 130px;
+
+        #container {
+            width: 900px;
+            margin: 0 auto;
+        }
+
 }
-#main #container {
-    width: 900px;
-    margin: 0 auto;
-}
+
 
 
 
@@ -176,29 +114,32 @@ header nav ul a:hover {
 p#banner {
     font-size: 22px;
     line-height: 32px;
-    color: #606060;
+    color: $banner-grey1;
     margin-top: 0;
     margin-bottom: 60px;
     padding-top: 20px;
     padding-bottom: 15px;
     text-align: center;
     font-style: italic;
-    background: #e8e8e8;
+    background: $banner-grey2;
     box-shadow: 0 5px 5px #888888;
 }
 p#banner2 {
     font-size: 22px;
     line-height: 32px;
-    color: #606060;
+    color: $banner-grey1;
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 20px;
     padding-bottom: 15px;
     text-align: center;
     font-style: italic;
-    background: #e8e8e8;
+    background: $banner-grey2;
     box-shadow: 0 -5px 5px #888888;
 }
+
+
+
 img.headshot {
     width: 160px;
     height: 160px;
@@ -210,27 +151,38 @@ img.headshot {
 
 
 
+
 /* Samples */
 
 #samples {
     width: 100%;
     text-align: center;
     margin-bottom: 80px;
+
+        div.box {
+            display: inline;
+        }
+        div.box img {
+            width: 24%;
+            height: auto;
+            transform: scale(1);
+            transition: transform .2s ease;
+
+                &:hover,
+                &:active {
+                transform: scale(.98);
+                transition: transform .2s ease;
+                }
+
+        }
+
 }
-#samples div.box {
-    display: inline;
-}
-#samples div.box img {
-    width: 24%;
-    height: auto;
-    transform: scale(1);
-    transition: transform .2s ease;
-}
-#samples div.box img:hover,
-#samples div.box img:active {
-    transform: scale(.98);
-    transition: transform .2s ease;
-}
+
+
+
+
+
+
 footer {
     background: #75a375;
     background: url(../assets/background_green.jpg) repeat top right;
@@ -238,14 +190,16 @@ footer {
     overflow: auto;
     margin: 0 auto;
     padding: 40px 0 80px 0;
-}
-footer #footer_text {
-    padding: 0 40px 0 40px;
-    text-align: center;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: bold;
-    color: #ffffff;
+
+        #footer_text {
+        padding: 0 40px 0 40px;
+        text-align: center;
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: bold;
+        color: $white;
+        }
+
 }
 
 
@@ -274,61 +228,80 @@ a.anchor_top {
 
 /* CONTACT FORM */
 
-#contact_form form {
-    width: 400px;
-    margin-top:30px;
-    margin-bottom: 100px;
+#contact_form{
+
+    form {
+        width: 400px;
+        margin-top:30px;
+        margin-bottom: 100px;
+    }
+    .form_row {
+        margin-bottom: 15px;
+    }
+    input,
+    textarea {
+        font-family: indexCustom, Helvetica, sans-serif;
+        font-size: 20px;
+        line-height: 28px;
+        color: #4b4b4b;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        border:solid 1px #aaaaaa;
+    }
+    input {
+        width: 380px;
+
+            &:focus{
+            border: solid 4px $green;
+            outline: none;
+            }
+
+    }
+    textarea {
+        width: 380px;
+        height: 150px;
+
+            &:focus{
+            border: solid 4px $green;
+            outline: none;
+            }
+    }
+
+    .button_row input {
+        width: 240px;
+        height: 50px;
+        background:$green;
+        color:$white;
+        box-shadow:.5px .5px 3px #888888;
+        transition: .2s;
+        -o-transition: .2s;
+        -ms-transition: .2s;
+        -moz-transition: .2s;
+        -webkit-transition: .2s;
+    
+
+            &:hover,
+            &:active {
+            width: 240px;
+            height: 48px;
+            margin-top:2px;
+            box-shadow:none;
+            transition: .2s;
+            -o-transition: .2s;
+            -ms-transition: .2s;
+            -moz-transition: .2s;
+            -webkit-transition: .2s;
+            }
+
 }
-#contact_form .form_row {
-    margin-bottom: 15px;
+
 }
-#contact_form input,
-#contact_form textarea {
-    font-family: indexCustom, Helvetica, sans-serif;
-    font-size: 20px;
-    line-height: 28px;
-    color: #4b4b4b;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    border:solid 1px #aaaaaa;
-}
-#contact_form input {
-    width: 380px;
-}
-#contact_form textarea {
-    width: 380px;
-    height: 150px;
-}
-#contact_form input:focus,
-#contact_form textarea:focus {
-    border: solid 4px #669966;
-    outline: none;
-}
-#contact_form .button_row input {
-    width: 240px;
-    height: 50px;
-    background:#669966;
-    color:#ffffff;
-    box-shadow:.5px .5px 3px #888888;
-    transition: .2s;
-    -o-transition: .2s;
-    -ms-transition: .2s;
-    -moz-transition: .2s;
-    -webkit-transition: .2s;
-}
-#contact_form .button_row input:hover,
-#contact_form .button_row input:active {
-    width: 240px;
-    height: 48px;
-    margin-top:2px;
-    box-shadow:none;
-    transition: .2s;
-    -o-transition: .2s;
-    -ms-transition: .2s;
-    -moz-transition: .2s;
-    -webkit-transition: .2s;
-}
+
+
+
+
+
 
 /* Contact Form - validation */
 
@@ -338,7 +311,7 @@ a.anchor_top {
     margin-bottom:5px;
     font-size:20px;
     line-height:24px;
-    color:#669966;
+    color:$green;
     font-weight:bold;
     display:block;
     }
@@ -346,7 +319,7 @@ a.anchor_top {
     margin-top:15px;
     font-size:24px;
     line-height:28px;
-    color:#669966;
+    color:$green;
     font-weight:bold;
     display:none;
     } 
@@ -360,16 +333,17 @@ a.anchor_top {
 
 #illustrations {
     margin-bottom:80px;
-}
-#illustrations div.box_ai {
-    display: inline;
-}
-#illustrations div.box_ai img {
-    border:solid 3px #669966;
-    padding:10px;
-    margin:5px;
-    width: 44%;
-    height: auto;
+
+        div.box_ai {
+        display: inline;
+        }
+        div.box_ai img {
+        border:solid 3px $green;
+        padding:10px;
+        margin:5px;
+        width: 44%;
+        height: auto;
+        }
 }
 
 /* END ILLUSTRATIONS */
@@ -386,25 +360,36 @@ a.anchor_top {
 /* Break point #1 */
 
 @media (min-width: 421px) and (max-width: 940px) {
-    header #header_container {
+ 
+    header{
+
+        #header_container {
         width: 96%;
         padding-left: 2%;
         padding-right: 2%;
         margin: 0px auto;
-    }
-    header nav {
+        }
+        nav {
         float: left;
         clear: both;
-    }
-    header nav ul {
+        }
+        nav ul {
         padding: 0 0 0 0;
-    }
-    header nav ul li {
+        }
+        nav ul li {
         padding: 0 10px 0 5px;
-    }
-    header nav ul a {
+        }
+        nav ul a {
         font-size: 18px;
+        }
+
     }
+
+
+
+
+
+
     #main,
     #main #container {
         width: 100%;
@@ -460,13 +445,6 @@ a.anchor_top {
 
 
 
-
-
-
-
-
-
-
 /* Break point #1.1 - SAMPLES */
 
 @media (min-width: 200px) and (max-width: 780px) {
@@ -480,6 +458,7 @@ a.anchor_top {
         line-height: 30px;
     }
 }
+
 
 
 
@@ -510,51 +489,61 @@ a.anchor_top {
 
 @media (min-width: 200px) and (max-width: 421px) {
     header {
+
         background: #558055;
-    }
-    header #header_container {
+
+        
+        #header_container {
         width: 100%;
         margin: 0px auto;
-    }
-    header #header_container #logo img {
+        }
+        #header_container #logo img {
         width: 280px;
         height: 70px;
         height: auto;
-    }
-    header #header_container #logo {
+        }
+        #header_container #logo {
         margin: 0 0 10px 20px;
         float: left;
-    }
-    header nav {
+        }
+        nav {
         float: left;
         clear: both;
         width: 100%;
         margin-top: -25px;
         margin-bottom: 10px;
-    }
-    header nav ul {
+        }
+        nav ul {
         padding: 0 0 0 0;
         margin-bottom: 0;
         text-align: center;
-    }
-    header nav ul li {
+        }
+        nav ul li {
         text-align: center;
         padding: 0 5px 10px 5px;
-    }
-    header nav ul a {
+        }
+        nav ul a {
         font-size: 14px;
         line-height: 20px;
+        }
+
     }
+
+
+
     #main {
         width: 100%;
         overflow: auto;
         margin-top: 120px;
+
+        #container {
+            width: auto;
+            min-width: 0px;
+            max-width: 421px;
+        }
+
     }
-    #main #container {
-        width: auto;
-        min-width: 0px;
-        max-width: 421px;
-    }
+
     p#banner,
     p#banner2 {
         font-size: 18px;
@@ -623,13 +612,15 @@ a.anchor_top {
 
     #illustrations {
         margin-bottom:60px;
-    }
-    #illustrations div.box_ai {
-        display: block;
-    }
-    #illustrations div.box_ai img {
-        width: 90%;
-        height: auto;
+
+        div.box_ai {
+            display: block;
+        }
+        div.box_ai img {
+            width: 90%;
+            height: auto;
+        }
+
     }
 
     /* END ILLUSTRATIONS */
@@ -641,30 +632,36 @@ a.anchor_top {
 
     /* CONTACT FORM - MOBILE */
     
-    #contact_form form {
+    #contact_form{
+
+        form {
         width: 100%;
         margin-bottom:80px;
-    }
-    #contact_form input {
+        }
+        input {
         width: 90%;
         padding-left: 5%;
         padding-right: 5%;
-    }
-    #contact_form textarea {
+        }
+        textarea {
         width: 90%;
         padding-left: 5%;
         padding-right: 5%;
         height: 100px;
-    }
-    #contact_form .button_row input {
+        }
+        .button_row input {
         width: 100%;
         height: 50px;
-    }
-    #contact_form .button_row input:hover,
-    #contact_form .button_row input:active {
-        width: 100%;
-        height: 48px;
-        margin-top:2px;
+
+            &:hover,
+            &:active {
+            width: 100%;
+            height: 48px;
+            margin-top:2px;
+            }
+
+        }
+
     }
 
 
