--- a/styles/main.css
+++ b/styles/main.css
@@ -237,18 +237,18 @@ a.anchor_top {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  border: solid 1px #aaaaaa; }
+  border: solid 1px #aaaaaa;
+  margin-left: 0; }
+  #contact_form input:focus,
+  #contact_form textarea:focus {
+    border: solid 4px #669966;
+    outline: none;
+    padding-left: 5px; }
 #contact_form input {
   width: 380px; }
-  #contact_form input:focus {
-    border: solid 4px #669966;
-    outline: none; }
 #contact_form textarea {
   width: 380px;
   height: 150px; }
-  #contact_form textarea:focus {
-    border: solid 4px #669966;
-    outline: none; }
 #contact_form .button_row input {
   width: 240px;
   height: 50px;
@@ -382,11 +382,10 @@ a.anchor_top {
       width: 100%;
       margin: 0px auto; }
     header #header_container #logo img {
-      width: 280px;
-      height: 70px;
+      width: 260px;
       height: auto; }
     header #header_container #logo {
-      margin: 0 0 10px 20px;
+      margin: 0 0 20px 20px;
       float: left; }
     header nav {
       float: left;
