Converted whole portfolio to Bootstrap

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,7 +2,8 @@
 
 $white: #ffffff;
 $gray: #4b4b4b;
-$green: #669966;
+$green1: #669966;
+$green2: #478047;
 $orange: #f4a460;
 
 $banner-grey1: #606060;
