Added nbsps and right-aligned items inside hamburger nav

--- a/styles/main.css
+++ b/styles/main.css
@@ -321,7 +321,7 @@ footer {
 /* Bootstrap Overwrites - MOBILE */
 @media (max-width: 767px) {
   .nav {
-    float: left; }
+    text-align: right; }
 
   #navbar-collapse li a {
     color: #ffffff;
