--- a/styles/main.scss
+++ b/styles/main.scss
@@ -413,7 +413,7 @@ display: none; }
 /* Bootstrap Overwrites - MOBILE */ 
 @media (max-width: 767px) {
 	.nav{
-		float:left;
+		text-align:right;
 	}
 
 	#navbar-collapse li a{
