Added more samples and shuffled around the fade classes

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,13 +11,23 @@ body{
 		background: url(../assets/background_body.jpg) repeat top right;
 	}
 
-p {
+p{
   font-size: 16px;
   line-height: 1.4;
   color: $gray;
 }
 
-h1 {
+ul{
+  font-size: 18px;
+  line-height: 1.4;
+  color: $gray;
+}
+
+ul li{
+	padding-bottom:10px;
+}
+
+h1{
 	color: $green1;
 	padding: 30px 0 0 0;
 	font-family: Helvetica, Arial, sans-serif;
@@ -26,7 +36,13 @@ h1 {
 	font-weight:bold;
 }
 
-h3 {
+h2{
+	color:#669966;
+	margin-top:40px;
+	margin-bottom:20px;
+}
+
+h3{
 	font-family: Helvetica, Arial, sans-serif;
 	color: $green1;
 	padding: 10px 0 0 0;
@@ -56,46 +72,35 @@ span.highlight3 {
 	font-size: larger;
 }
 
-a.fade_custom {
-	color: $green1;
-	font-weight: bold;
+a.fade_all {
 	text-decoration: none;
 	transition: .4s;
 	-o-transition: .4s;
 	-ms-transition: .4s;
 	-moz-transition: .4s;
 	-webkit-transition: .4s;
+
+	&:hover,&:active,&:focus{
+		color: $orange;
+		text-decoration: none;
+		transition: .4s;
+		-o-transition: .4s;
+		-ms-transition: .4s;
+		-moz-transition: .4s;
+		-webkit-transition: .4s;		
+	}
 }
 
-a.fade_custom:hover {
-	color: $orange;
-	text-decoration: none;
-	transition: .4s;
-	-o-transition: .4s;
-	-ms-transition: .4s;
-	-moz-transition: .4s;
-	-webkit-transition: .4s;
+a.fade_1{
+	color:$green1;
+	font-weight:bold;
 }
-
-a.LinkedIn {
-	color: #4875b4;
-	text-decoration: none;
-	font-weight: bold;
-	transition: .4s;
-	-o-transition: .4s;
-	-ms-transition: .4s;
-	-moz-transition: .4s;
-	-webkit-transition: .4s;
+a.fade_2{
+	color:$green1;
 }
-
-a.LinkedIn:hover {
-	color: $orange;
-	text-decoration: none;
-	transition: .4s;
-	-o-transition: .4s;
-	-ms-transition: .4s;
-	-moz-transition: .4s;
-	-webkit-transition: .4s;
+a.fade_3{
+	color:#4875b4;
+	font-weight:bold;
 }
 
 
