--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,14 @@ p {
   line-height: 1.4;
   color: #4b4b4b; }
 
+ul {
+  font-size: 18px;
+  line-height: 1.4;
+  color: #4b4b4b; }
+
+ul li {
+  padding-bottom: 10px; }
+
 h1 {
   color: #669966;
   padding: 30px 0 0 0;
@@ -17,6 +25,11 @@ h1 {
   font-size: 34px;
   line-height: 1.2;
   font-weight: bold; }
+
+h2 {
+  color: #669966;
+  margin-top: 40px;
+  margin-bottom: 20px; }
 
 h3 {
   font-family: Helvetica, Arial, sans-serif;
@@ -44,43 +57,32 @@ span.highlight3 {
   color: #f4a460;
   font-size: larger; }
 
-a.fade_custom {
+a.fade_all {
+  text-decoration: none;
+  transition: .4s;
+  -o-transition: .4s;
+  -ms-transition: .4s;
+  -moz-transition: .4s;
+  -webkit-transition: .4s; }
+  a.fade_all:hover, a.fade_all:active, a.fade_all:focus {
+    color: #f4a460;
+    text-decoration: none;
+    transition: .4s;
+    -o-transition: .4s;
+    -ms-transition: .4s;
+    -moz-transition: .4s;
+    -webkit-transition: .4s; }
+
+a.fade_1 {
   color: #669966;
-  font-weight: bold;
-  text-decoration: none;
-  transition: .4s;
-  -o-transition: .4s;
-  -ms-transition: .4s;
-  -moz-transition: .4s;
-  -webkit-transition: .4s; }
+  font-weight: bold; }
 
-a.fade_custom:hover {
-  color: #f4a460;
-  text-decoration: none;
-  transition: .4s;
-  -o-transition: .4s;
-  -ms-transition: .4s;
-  -moz-transition: .4s;
-  -webkit-transition: .4s; }
+a.fade_2 {
+  color: #669966; }
 
-a.LinkedIn {
+a.fade_3 {
   color: #4875b4;
-  text-decoration: none;
-  font-weight: bold;
-  transition: .4s;
-  -o-transition: .4s;
-  -ms-transition: .4s;
-  -moz-transition: .4s;
-  -webkit-transition: .4s; }
-
-a.LinkedIn:hover {
-  color: #f4a460;
-  text-decoration: none;
-  transition: .4s;
-  -o-transition: .4s;
-  -ms-transition: .4s;
-  -moz-transition: .4s;
-  -webkit-transition: .4s; }
+  font-weight: bold; }
 
 /* Margins, borders */
 .margin-bottom-20 {
