--- a/styles/main.css
+++ b/styles/main.css
@@ -109,6 +109,9 @@ a.fade_4 {
 .margin-bottom-60 {
   margin-bottom: 60px; }
 
+.margin-bottom-80 {
+  margin-bottom: 60px; }
+
 .border-green {
   border: solid 2px #669966; }
   .border-green:hover, .border-green:focus, .border-green:active {
@@ -189,7 +192,7 @@ footer {
 #contact_form form {
   width: 100%;
   margin-top: 30px;
-  margin-bottom: 100px; }
+  margin-bottom: 60px; }
 #contact_form .form_row {
   margin-bottom: 15px; }
 #contact_form input,
