--- a/styles/main.scss
+++ b/styles/main.scss
@@ -138,6 +138,9 @@ a.fade_4{
 .margin-bottom-60{
 	margin-bottom:60px;
 }
+.margin-bottom-80{
+	margin-bottom:60px;
+}
 .border-green{
 	border:solid 2px $green1;
 
@@ -245,7 +248,7 @@ footer{
     form {
         width: 100%;
         margin-top:30px;
-        margin-bottom: 100px;
+        margin-bottom: 60px;
     }
 
     .form_row {
